--- a/index.html
+++ b/index.html
@@ -292,151 +292,197 @@
           <p class="lead">Je prends le temps de vous expliquer et de vous former afin que vous puissiez vous sentir à l'aise avec l'informatique.</p>
           
           <ul class="values">
-  <!-- Sourire & pédagogie : gros smiley qui rebondit légèrement -->
-  <li data-magnet>
-    <span class="ic-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
-        <!-- visage -->
-        <circle id="face" cx="16" cy="16" r="9" fill="#facc15" />
-        <!-- yeux -->
-        <circle cx="13" cy="14" r="1.2" fill="#111827" />
-        <circle cx="19" cy="14" r="1.2" fill="#111827" />
-        <!-- sourire -->
-        <path d="M12.5 18 Q16 20 19.5 18"
-              stroke="#111827" stroke-width="1.3"
-              stroke-linecap="round" fill="none" />
-        <!-- petit tableau pour la pédagogie -->
-        <rect x="5" y="7" width="8" height="5" rx="1.2"
-              fill="#020617" stroke="#e5e7eb" stroke-width="0.7" />
-        <line x1="6" y1="9.5" x2="11.5" y2="9.5"
-              stroke="#ec4899" stroke-width="0.8" stroke-linecap="round" />
-        <line x1="6" y1="11" x2="9.5" y2="11"
-              stroke="#facc15" stroke-width="0.8" stroke-linecap="round" />
-        <!-- animation rebond du visage -->
+<!-- Sourire & pédagogie -->
+<li data-magnet>
+  <span class="ic-badge">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+      <!-- petit tableau -->
+      <rect x="4.5" y="7" width="8.5" height="5.2" rx="1.2"
+            fill="#020617" stroke="#e5e7eb" stroke-width="0.7" />
+      <line x1="6" y1="9.3" x2="11.5" y2="9.3"
+            stroke="#ec4899" stroke-width="0.8" stroke-linecap="round" />
+      <line x1="6" y1="11" x2="9.7" y2="11"
+            stroke="#facc15" stroke-width="0.8" stroke-linecap="round" />
+
+      <!-- visage + anim de rebond -->
+      <g>
+        <g>
+          <circle cx="18" cy="17" r="8.5" fill="#facc15" />
+          <!-- yeux -->
+          <circle cx="15" cy="15" r="1.2" fill="#111827" />
+          <circle cx="21" cy="15" r="1.2" fill="#111827" />
+          <!-- sourire -->
+          <path d="M14.5 18.5 Q18 21 21.5 18.5"
+                stroke="#111827" stroke-width="1.3"
+                stroke-linecap="round" fill="none" />
+        </g>
+        <!-- rebond du visage -->
         <animateTransform
-          xlink:href="#face"
           attributeName="transform"
           type="translate"
-          values="0 0; 0 -0.8; 0 0"
+          values="0 0; 0 -1.2; 0 0"
           dur="1.8s"
           repeatCount="indefinite" />
-      </svg>
-    </span>
-    Sourire & pédagogie
-  </li>
+      </g>
+    </svg>
+  </span>
+  Sourire & pédagogie
+</li>
 
-  <!-- Ponctualité & fiabilité : horloge avec minute qui tourne -->
-  <li data-magnet>
-    <span class="ic-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
-        <circle cx="16" cy="16" r="7.8"
-                fill="#020617" stroke="#e5e7eb" stroke-width="1.1" />
-        <circle cx="16" cy="16" r="6"
-                fill="#020617" stroke="#4b5563" stroke-width="0.9" />
-        <g stroke="#4b5563" stroke-linecap="round" stroke-width="0.8">
-          <line x1="16" y1="9.5" x2="16" y2="10.7" />
-          <line x1="16" y1="21.3" x2="16" y2="22.5" />
-          <line x1="9.5" y1="16" x2="10.7" y2="16" />
-          <line x1="21.3" y1="16" x2="22.5" y2="16" />
-        </g>
-        <line x1="16" y1="16" x2="16" y2="11.5"
-              stroke="#e5e7eb" stroke-width="0.9" stroke-linecap="round" />
-        <line id="minute-hand" x1="16" y1="16" x2="20.5" y2="16"
-              stroke="#f97316" stroke-width="0.9" stroke-linecap="round" />
-        <circle cx="16" cy="16" r="0.9" fill="#facc15" />
-        <animateTransform
-          xlink:href="#minute-hand"
-          attributeName="transform"
-          type="rotate"
-          from="0 16 16"
-          to="360 16 16"
-          dur="5s"
-          repeatCount="indefinite" />
-      </svg>
-    </span>
-    Ponctualité & fiabilité
-  </li>
+<!-- Ponctualité & fiabilité -->
+<li data-magnet>
+  <span class="ic-badge">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+      <!-- cadran plus grand -->
+      <circle cx="16" cy="16" r="9.5"
+              fill="#020617" stroke="#e5e7eb" stroke-width="1.2" />
+      <circle cx="16" cy="16" r="7.5"
+              fill="#020617" stroke="#4b5563" stroke-width="1" />
+      <!-- quarts -->
+      <g stroke="#4b5563" stroke-linecap="round" stroke-width="0.9">
+        <line x1="16" y1="8" x2="16" y2="9.5" />
+        <line x1="16" y1="22.5" x2="16" y2="24" />
+        <line x1="8" y1="16" x2="9.5" y2="16" />
+        <line x1="22.5" y1="16" x2="24" y2="16" />
+      </g>
+      <!-- aiguille heure -->
+      <line x1="16" y1="16" x2="16" y2="11.3"
+            stroke="#e5e7eb" stroke-width="1.1" stroke-linecap="round" />
+      <!-- aiguille minute animée -->
+      <line id="minute-hand" x1="16" y1="16" x2="21.3" y2="16"
+            stroke="#f97316" stroke-width="1.1" stroke-linecap="round" />
+      <circle cx="16" cy="16" r="1" fill="#facc15" />
+      <!-- rotation -->
+      <animateTransform
+        xlink:href="#minute-hand"
+        attributeName="transform"
+        type="rotate"
+        from="0 16 16"
+        to="360 16 16"
+        dur="4.5s"
+        repeatCount="indefinite" />
+    </svg>
+  </span>
+  Ponctualité & fiabilité
+</li>
 
-  <!-- Adaptabilité & clarté : ampoule qui pulse + flèches d’échange -->
-  <li data-magnet>
-    <span class="ic-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
-        <!-- ampoule -->
-        <g id="bulb">
-          <circle cx="12" cy="12" r="4.2" fill="#facc15" />
-          <rect x="11" y="15.2" width="2" height="3.2" rx="0.8" fill="#111827" />
-          <rect x="10.4" y="18.2" width="3.2" height="1.4" rx="0.7" fill="#111827" />
-          <g stroke="#facc15" stroke-width="0.9" stroke-linecap="round">
-            <line x1="12" y1="7.2" x2="12" y2="6" />
-            <line x1="9" y1="8.4" x2="8.2" y2="7.4" />
-            <line x1="15" y1="8.4" x2="15.8" y2="7.4" />
+<!-- Adaptabilité & clarté -->
+<li data-magnet>
+  <span class="ic-badge">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+      <!-- bulle de dialogue (clarté) -->
+      <path
+        d="M6 10.5
+           Q6 7.5 9 7.5
+           H18
+           Q21 7.5 21 10.5
+           V15
+           Q21 18 18 18
+           H12
+           L9.5 20.5
+           V18
+           Q6 18 6 15 Z"
+        fill="#020617" stroke="#e5e7eb" stroke-width="1" />
+      <!-- lignes de texte -->
+      <line x1="9" y1="11" x2="18" y2="11"
+            stroke="#facc15" stroke-width="1" stroke-linecap="round" />
+      <line x1="9" y1="13" x2="16.5" y2="13"
+            stroke="#e5e7eb" stroke-width="0.9" stroke-linecap="round" />
+      <line x1="9" y1="15" x2="14.5" y2="15"
+            stroke="#e5e7eb" stroke-width="0.9" stroke-linecap="round" />
+
+      <!-- engrenage (adaptabilité) -->
+      <g transform="translate(21.5,20)">
+        <g id="gear">
+          <circle cx="0" cy="0" r="2.3" fill="#111827" stroke="#facc15" stroke-width="0.7" />
+          <!-- dents -->
+          <g stroke="#facc15" stroke-width="0.7" stroke-linecap="round">
+            <line x1="0" y1="-3.4" x2="0" y2="-4.4" />
+            <line x1="0" y1="3.4"  x2="0" y2="4.4" />
+            <line x1="-3.4" y1="0" x2="-4.4" y2="0" />
+            <line x1="3.4"  y1="0" x2="4.4"  y2="0" />
+            <line x1="2.4" y1="2.4" x2="3.1" y2="3.1" />
+            <line x1="-2.4" y1="-2.4" x2="-3.1" y2="-3.1" />
+            <line x1="2.4" y1="-2.4" x2="3.1" y2="-3.1" />
+            <line x1="-2.4" y1="2.4" x2="-3.1" y2="3.1" />
           </g>
         </g>
-        <animate
-          xlink:href="#bulb"
-          attributeName="opacity"
-          values="0.7;1;0.7"
-          dur="2s"
-          repeatCount="indefinite" />
-
-        <!-- flèches adaptabilité -->
-        <g stroke="#ec4899" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M18 11 H23 Q25 11 25 13 V14.5" fill="none" />
-          <path d="M23 14.5 L25 16.5 L27 14.5" fill="none" />
-          <path d="M24 19 H19 Q17 19 17 17.2 V16" fill="none" />
-          <path d="M19 16 L17 14 L15 16" fill="none" />
-        </g>
-      </svg>
-    </span>
-    Adaptabilité & clarté
-  </li>
-
-  <!-- Transparence & sécurité : cadenas qui s’ouvre / se ferme -->
-  <li data-magnet>
-    <span class="ic-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
-        <!-- bouclier -->
-        <path
-          d="M16 5.5 L9.5 8.3 V16
-             C9.5 20.7 12.3 24.5 16 26.4
-             C19.7 24.5 22.5 20.7 22.5 16
-             V8.3 Z"
-          fill="#020617" stroke="#e5e7eb" stroke-width="1.1" />
-        <!-- cadenas -->
-        <g id="lock-shackle">
-          <path d="M14.2 14.7 V13.3
-                   Q14.2 11.3 16 11.3
-                   Q17.8 11.3 17.8 13.3 V14.7"
-                fill="none" stroke="#e5e7eb" stroke-width="0.8"
-                stroke-linecap="round" />
-        </g>
-        <rect x="13" y="14.7" width="6" height="4.5" rx="1"
-              fill="#0f172a" stroke="#e5e7eb" stroke-width="0.8" />
-        <circle cx="16" cy="16.9" r="0.8" fill="#facc15" />
-
-        <!-- animation ouverture / fermeture du cadenas -->
+        <!-- rotation continue -->
         <animateTransform
-          xlink:href="#lock-shackle"
           attributeName="transform"
           type="rotate"
-          values="0 16 13.5; -18 16 13.5; 0 16 13.5"
-          dur="2.6s"
+          from="0"
+          to="360"
+          dur="3s"
           repeatCount="indefinite" />
+      </g>
 
-        <!-- petit reflet qui balaye -->
+      <!-- petit surlignage qui traverse la bulle (clarification) -->
+      <rect x="8.5" y="10.2" width="10.5" height="0.9"
+            fill="rgba(250,204,21,0.2)">
+        <animate
+          attributeName="x"
+          values="8.5;11;8.5"
+          dur="2.3s"
+          repeatCount="indefinite" />
+      </rect>
+    </svg>
+  </span>
+  Adaptabilité & clarté
+</li>
+
+<!-- Transparence & sécurité -->
+<li data-magnet>
+  <span class="ic-badge">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+      <!-- corps du cadenas -->
+      <rect x="10.5" y="14.5" width="11" height="7.5" rx="2"
+            fill="#020617" stroke="#e5e7eb" stroke-width="1" />
+
+      <!-- anse animée -->
+      <g>
         <path
-          d="M11 9.2 Q16 7.8 21 9.2"
-          stroke="#facc15" stroke-width="0.9" stroke-linecap="round">
-          <animate
-            attributeName="opacity"
-            values="0;1;0"
-            dur="2.4s"
-            repeatCount="indefinite" />
-        </path>
-      </svg>
-    </span>
-    Transparence & sécurité
-  </li>
+          id="shackle"
+          d="M12.8 14.5 V12.5
+             Q12.8 9.5 16 9.5
+             Q19.2 9.5 19.2 12.5
+             V14.5"
+          fill="none" stroke="#e5e7eb" stroke-width="1.1"
+          stroke-linecap="round" />
+        <animateTransform
+          attributeName="transform"
+          type="rotate"
+          values="0 16 12; -20 16 12; 0 16 12"
+          dur="2.4s"
+          repeatCount="indefinite" />
+      </g>
+
+      <!-- trou de serrure -->
+      <circle cx="16" cy="18" r="1.1" fill="#facc15" />
+      <rect x="15.5" y="18.7" width="1" height="2"
+            rx="0.5" fill="#facc15" />
+
+      <!-- reflet "transparence" -->
+      <path
+        d="M11 11 Q16 9.8 21 11"
+        stroke="#facc15" stroke-width="0.9" stroke-linecap="round">
+        <animate
+          attributeName="opacity"
+          values="0;1;0"
+          dur="2.4s"
+          repeatCount="indefinite" />
+        <animateTransform
+          attributeName="transform"
+          type="translate"
+          values="-1 0; 1 0; -1 0"
+          dur="2.4s"
+          repeatCount="indefinite" />
+      </path>
+    </svg>
+  </span>
+  Transparence & sécurité
+</li>
+
 </ul>
         </div>
 
@@ -781,49 +827,52 @@
 
 <!-- TUILE MAIL -->
 <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet>
-  <div class="contact__icon">
-    <svg viewBox="0 0 64 64" aria-hidden="true">
-      <defs>
-        <linearGradient id="mail-grad2" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0%" stop-color="#ec4899" />
-          <stop offset="50%" stop-color="#f97316" />
-          <stop offset="100%" stop-color="#facc15" />
-        </linearGradient>
-      </defs>
+<div class="contact__icon">
+  <svg viewBox="0 0 64 64" aria-hidden="true">
+    <defs>
+      <linearGradient id="mail-grad-clean" x1="0%" y1="0%" x2="100%" y2="0%">
+        <stop offset="0%" stop-color="#ec4899" />
+        <stop offset="50%" stop-color="#f97316" />
+        <stop offset="100%" stop-color="#facc15" />
+      </linearGradient>
+    </defs>
 
-      <!-- corps de l’enveloppe -->
-      <rect x="10" y="20" width="44" height="26" rx="6"
-            fill="#020617" stroke="#e5e7eb" stroke-width="2" />
-      <!-- intérieur en dégradé -->
-      <path d="M12 22 L32 36 L52 22" fill="url(#mail-grad2)" />
+    <!-- corps de l’enveloppe -->
+    <rect x="10" y="22" width="44" height="24" rx="6"
+          fill="#020617" stroke="#e5e7eb" stroke-width="2" />
 
-      <!-- lettre qui glisse -->
-      <rect id="mail-letter"
+    <!-- lettre -->
+    <g>
+      <rect id="letter"
             x="14" y="18" width="36" height="18" rx="2.5"
             fill="#f9fafb" />
+      <!-- anim sortie / rentrée douce -->
       <animateTransform
-        xlink:href="#mail-letter"
         attributeName="transform"
         type="translate"
         values="0 0; 0 -6; 0 0"
         dur="2.6s"
         repeatCount="indefinite" />
+    </g>
 
-      <!-- rabat blanc -->
-      <path
-        d="M12 22 L32 36 L52 22 L52 20 L12 20 Z"
-        fill="rgba(15,23,42,0.95)" stroke="#e5e7eb" stroke-width="2" />
+    <!-- intérieur coloré -->
+    <path d="M12 24 L32 36 L52 24" fill="url(#mail-grad-clean)" />
 
-      <!-- petite notif -->
-      <circle cx="50" cy="22" r="3.5" fill="#ef4444">
-        <animate
-          attributeName="r"
-          values="3.5;4.4;3.5"
-          dur="2s"
-          repeatCount="indefinite" />
-      </circle>
-    </svg>
-  </div>
+    <!-- rabat -->
+    <path
+      d="M12 24 L32 36 L52 24 L52 22 L12 22 Z"
+      fill="rgba(15,23,42,0.98)" stroke="#e5e7eb" stroke-width="2" />
+
+    <!-- badge de notif -->
+    <circle cx="50" cy="24" r="3.5" fill="#ef4444">
+      <animate
+        attributeName="r"
+        values="3.5;4.3;3.5"
+        dur="2s"
+        repeatCount="indefinite" />
+    </circle>
+  </svg>
+</div>
   <strong>contact@informatique-cerdagne.fr</strong>
   <small>Réponse rapide</small>
 </a>
@@ -832,58 +881,63 @@
 <a class="cta-tile btn-magnet"
    href="https://www.google.com/maps/search/?api=1&query=Cerdagne"
    target="_blank" rel="noopener" data-magnet>
-  <div class="contact__icon">
-    <svg viewBox="0 0 64 64" aria-hidden="true">
-      <!-- carte -->
-      <rect x="10" y="16" width="44" height="30" rx="6"
-            fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+<div class="contact__icon">
+  <svg viewBox="0 0 64 64" aria-hidden="true">
+    <!-- cercles qui se propagent -->
+    <circle cx="32" cy="38" r="4"
+            fill="none" stroke="#facc15" stroke-width="1.5" opacity="0">
+      <animate
+        attributeName="r"
+        values="4;10"
+        dur="2s"
+        repeatCount="indefinite" />
+      <animate
+        attributeName="opacity"
+        values="0.8;0;0"
+        dur="2s"
+        repeatCount="indefinite" />
+    </circle>
+    <circle cx="32" cy="38" r="8"
+            fill="none" stroke="#ec4899" stroke-width="1.2" opacity="0">
+      <animate
+        attributeName="r"
+        values="8;16"
+        dur="2.6s"
+        repeatCount="indefinite" />
+      <animate
+        attributeName="opacity"
+        values="0.7;0;0"
+        dur="2.6s"
+        repeatCount="indefinite" />
+    </circle>
 
-      <!-- trajet -->
-      <path id="route2"
-            d="M16 40 C24 32 32 36 40 30 C46 25 50 24 54 22"
-            fill="none"
-            stroke="#64748b"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-dasharray="4 6"
-            stroke-dashoffset="0">
-        <animate
-          attributeName="stroke-dashoffset"
-          values="0;10;0"
-          dur="2.4s"
-          repeatCount="indefinite" />
-      </path>
+    <!-- pin central -->
+    <g>
+      <path
+        d="M32 18
+           C27 18 23 22 23 27
+           C23 30.4 24.6 33.2 26.4 35.8
+           C28 38.1 29.7 40.1 31 41.9
+           C31.5 42.6 31.7 42.8 32 43.2
+           C32.3 42.8 32.5 42.6 33 41.9
+           C34.3 40.1 36 38.1 37.6 35.8
+           C39.4 33.2 41 30.4 41 27
+           C41 22 37 18 32 18Z"
+        fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+      <circle cx="32" cy="27" r="5" fill="#ec4899" />
+    </g>
 
-      <!-- point de départ -->
-      <circle cx="16" cy="40" r="3" fill="#facc15" />
-
-      <!-- pin de destination -->
-      <g>
-        <path
-          d="M40 20
-             C35 20 31 23.8 31 28
-             C31 30.9 32.3 33.4 33.8 35.6
-             C35 37.3 36.2 38.8 37.3 40.2
-             C37.7 40.8 38.1 41.3 38.5 41.8
-             C38.9 41.3 39.3 40.8 39.7 40.2
-             C40.8 38.8 42 37.3 43.2 35.6
-             C44.7 33.4 46 30.9 46 28
-             C46 23.8 43 20 40 20Z"
-          fill="#020617" stroke="#e5e7eb" stroke-width="2" />
-        <circle cx="40" cy="28" r="4.3" fill="#ec4899" />
-      </g>
-
-      <!-- halo -->
-      <ellipse cx="40" cy="44" rx="7.5" ry="2.7"
-               fill="rgba(0,0,0,0.7)">
-        <animate
-          attributeName="opacity"
-          values="0.7;0.3;0.7"
-          dur="2.2s"
-          repeatCount="indefinite" />
-      </ellipse>
-    </svg>
-  </div>
+    <!-- ombre -->
+    <ellipse cx="32" cy="42.5" rx="8" ry="2.5"
+             fill="rgba(0,0,0,0.7)">
+      <animate
+        attributeName="opacity"
+        values="0.7;0.4;0.7"
+        dur="2s"
+        repeatCount="indefinite" />
+    </ellipse>
+  </svg>
+</div>
   <strong>Cerdagne / Capcir</strong>
   <small>Zone d’intervention</small>
 </a>
