--- a/index.html
+++ b/index.html
@@ -295,36 +295,36 @@
 <!-- Sourire & pédagogie -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class=" ic-svg--bounce">
-      <!-- petit tableau -->
-      <rect x="4.5" y="7" width="8.5" height="5.2" rx="1.2"
-            fill="#020617" stroke="#e5e7eb" stroke-width="0.7" />
-      <line x1="6" y1="9.3" x2="11.5" y2="9.3"
-            stroke="#ec4899" stroke-width="0.8" stroke-linecap="round" />
-      <line x1="6" y1="11" x2="9.7" y2="11"
-            stroke="#facc15" stroke-width="0.8" stroke-linecap="round" />
+<svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+  <!-- petit tableau pour la pédagogie -->
+  <rect x="4.5" y="6.5" width="8.5" height="5.2" rx="1.2"
+        fill="#020617" stroke="#e5e7eb" stroke-width="0.7" />
+  <line x1="6" y1="8.8" x2="11.5" y2="8.8"
+        stroke="#ec4899" stroke-width="0.8" stroke-linecap="round" />
+  <line x1="6" y1="10.6" x2="9.7" y2="10.6"
+        stroke="#facc15" stroke-width="0.8" stroke-linecap="round" />
 
-      <!-- visage + anim de rebond -->
-      <g>
-        <g>
-          <circle cx="18" cy="17" r="8.5" fill="#facc15" />
-          <!-- yeux -->
-          <circle cx="15" cy="15" r="1.2" fill="#111827" />
-          <circle cx="21" cy="15" r="1.2" fill="#111827" />
-          <!-- sourire -->
-          <path d="M14.5 18.5 Q18 21 21.5 18.5"
-                stroke="#111827" stroke-width="1.3"
-                stroke-linecap="round" fill="none" />
-        </g>
-        <!-- rebond du visage -->
-        <animateTransform
-          attributeName="transform"
-          type="translate"
-          values="0 0; 0 -1.2; 0 0"
-          dur="1.8s"
-          repeatCount="indefinite" />
-      </g>
-    </svg>
+  <!-- visage -->
+  <circle cx="18" cy="18" r="9" fill="#facc15" />
+
+  <!-- yeux -->
+  <circle cx="15" cy="16" r="1.2" fill="#111827" />
+  <circle cx="21" cy="16" r="1.2" fill="#111827" />
+
+  <!-- sourire animé -->
+  <path id="smile"
+        d="M13 20 Q18 21.5 23 20"
+        stroke="#111827" stroke-width="1.4"
+        stroke-linecap="round" fill="none">
+    <animate attributeName="d"
+             dur="1.6s"
+             repeatCount="indefinite"
+             values="
+              M13 20 Q18 21.5 23 20;
+              M13 19 Q18 23 23 19;
+              M13 20 Q18 21.5 23 20" />
+  </path>
+</svg>
   </span>
   Sourire & pédagogie
 </li>
@@ -332,36 +332,38 @@
 <!-- Ponctualité & fiabilité -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg ic-svg--pulse">
-      <!-- cadran plus grand -->
-      <circle cx="16" cy="16" r="9.5"
-              fill="#020617" stroke="#e5e7eb" stroke-width="1.2" />
-      <circle cx="16" cy="16" r="7.5"
-              fill="#020617" stroke="#4b5563" stroke-width="1" />
-      <!-- quarts -->
-      <g stroke="#4b5563" stroke-linecap="round" stroke-width="0.9">
-        <line x1="16" y1="8" x2="16" y2="9.5" />
-        <line x1="16" y1="22.5" x2="16" y2="24" />
-        <line x1="8" y1="16" x2="9.5" y2="16" />
-        <line x1="22.5" y1="16" x2="24" y2="16" />
-      </g>
-      <!-- aiguille heure -->
-      <line x1="16" y1="16" x2="16" y2="11.3"
-            stroke="#e5e7eb" stroke-width="1.1" stroke-linecap="round" />
-      <!-- aiguille minute animée -->
-      <line id="minute-hand" x1="16" y1="16" x2="21.3" y2="16"
-            stroke="#f97316" stroke-width="1.1" stroke-linecap="round" />
-      <circle cx="16" cy="16" r="1" fill="#facc15" />
-      <!-- rotation -->
-      <animateTransform
-        xlink:href="#minute-hand"
-        attributeName="transform"
-        type="rotate"
-        from="0 16 16"
-        to="360 16 16"
-        dur="4.5s"
-        repeatCount="indefinite" />
-    </svg>
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+  <!-- cadran -->
+  <circle cx="16" cy="16" r="9.5"
+          fill="#020617" stroke="#e5e7eb" stroke-width="1.2" />
+  <circle cx="16" cy="16" r="7.5"
+          fill="#020617" stroke="#4b5563" stroke-width="1" />
+
+  <!-- marques -->
+  <g stroke="#4b5563" stroke-linecap="round" stroke-width="0.9">
+    <line x1="16" y1="8" x2="16" y2="9.5" />
+    <line x1="16" y1="22.5" x2="16" y2="24" />
+    <line x1="8"  y1="16" x2="9.5" y2="16" />
+    <line x1="22.5" y1="16" x2="24"  y2="16" />
+  </g>
+
+  <!-- aiguille heure -->
+  <line x1="16" y1="16" x2="16" y2="11.3"
+        stroke="#e5e7eb" stroke-width="1.1" stroke-linecap="round" />
+
+  <!-- aiguille minute animée -->
+  <line id="minute-hand" x1="16" y1="16" x2="21.3" y2="16"
+        stroke="#f97316" stroke-width="1.1" stroke-linecap="round">
+    <animateTransform attributeName="transform"
+                      type="rotate"
+                      from="0 16 16"
+                      to="360 16 16"
+                      dur="4s"
+                      repeatCount="indefinite" />
+  </line>
+
+  <circle cx="16" cy="16" r="1.1" fill="#facc15" />
+</svg>
   </span>
   Ponctualité & fiabilité
 </li>
@@ -369,64 +371,49 @@
 <!-- Adaptabilité & clarté -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg ic-svg--wiggle">
-      <!-- bulle de dialogue (clarté) -->
-      <path
-        d="M6 10.5
-           Q6 7.5 9 7.5
-           H18
-           Q21 7.5 21 10.5
-           V15
-           Q21 18 18 18
-           H12
-           L9.5 20.5
-           V18
-           Q6 18 6 15 Z"
-        fill="#020617" stroke="#e5e7eb" stroke-width="1" />
-      <!-- lignes de texte -->
-      <line x1="9" y1="11" x2="18" y2="11"
-            stroke="#facc15" stroke-width="1" stroke-linecap="round" />
-      <line x1="9" y1="13" x2="16.5" y2="13"
-            stroke="#e5e7eb" stroke-width="0.9" stroke-linecap="round" />
-      <line x1="9" y1="15" x2="14.5" y2="15"
-            stroke="#e5e7eb" stroke-width="0.9" stroke-linecap="round" />
+<svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+  <!-- ampoule au centre (clarté) -->
+  <g id="bulb">
+    <circle cx="16" cy="13" r="5" fill="#facc15" />
+    <rect x="14.5" y="17" width="3" height="3.5" rx="0.9" fill="#111827" />
+    <rect x="14" y="20.3" width="4" height="1.6" rx="0.8" fill="#111827" />
 
-      <!-- engrenage (adaptabilité) -->
-      <g transform="translate(21.5,20)">
-        <g id="gear">
-          <circle cx="0" cy="0" r="2.3" fill="#111827" stroke="#facc15" stroke-width="0.7" />
-          <!-- dents -->
-          <g stroke="#facc15" stroke-width="0.7" stroke-linecap="round">
-            <line x1="0" y1="-3.4" x2="0" y2="-4.4" />
-            <line x1="0" y1="3.4"  x2="0" y2="4.4" />
-            <line x1="-3.4" y1="0" x2="-4.4" y2="0" />
-            <line x1="3.4"  y1="0" x2="4.4"  y2="0" />
-            <line x1="2.4" y1="2.4" x2="3.1" y2="3.1" />
-            <line x1="-2.4" y1="-2.4" x2="-3.1" y2="-3.1" />
-            <line x1="2.4" y1="-2.4" x2="3.1" y2="-3.1" />
-            <line x1="-2.4" y1="2.4" x2="-3.1" y2="3.1" />
-          </g>
-        </g>
-        <!-- rotation continue -->
-        <animateTransform
-          attributeName="transform"
-          type="rotate"
-          from="0"
-          to="360"
-          dur="3s"
-          repeatCount="indefinite" />
-      </g>
+    <!-- rayons -->
+    <g stroke="#facc15" stroke-width="1" stroke-linecap="round">
+      <line x1="16" y1="6.5" x2="16" y2="4.8" />
+      <line x1="11.5" y1="7.8" x2="10.4" y2="6.6" />
+      <line x1="20.5" y1="7.8" x2="21.6" y2="6.6" />
+    </g>
 
-      <!-- petit surlignage qui traverse la bulle (clarification) -->
-      <rect x="8.5" y="10.2" width="10.5" height="0.9"
-            fill="rgba(250,204,21,0.2)">
-        <animate
-          attributeName="x"
-          values="8.5;11;8.5"
-          dur="2.3s"
-          repeatCount="indefinite" />
-      </rect>
-    </svg>
+    <!-- ampoule qui pulse -->
+    <animate attributeName="opacity"
+             values="0.7;1;0.7"
+             dur="1.8s"
+             repeatCount="indefinite" />
+  </g>
+
+  <!-- flèches qui tournent (adaptabilité) -->
+  <g stroke="#ec4899" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round">
+    <!-- cercle imaginaire de rotation -->
+    <g>
+      <path d="M9 17 A7 7 0 0 0 16 24">
+        <animate attributeName="stroke-dasharray"
+                 values="0 40; 40 0; 0 40"
+                 dur="2.2s"
+                 repeatCount="indefinite" />
+      </path>
+      <path d="M23 17 A7 7 0 0 1 16 24">
+        <animate attributeName="stroke-dasharray"
+                 values="40 0; 0 40; 40 0"
+                 dur="2.2s"
+                 repeatCount="indefinite" />
+      </path>
+      <!-- petites pointes de flèches -->
+      <path d="M8.5 16.5 L9.5 18.5 L10.5 16.5" />
+      <path d="M22.5 16.5 L21.5 18.5 L20.5 16.5" />
+    </g>
+  </g>
+</svg>
   </span>
   Adaptabilité & clarté
 </li>
@@ -434,51 +421,43 @@
 <!-- Transparence & sécurité -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg ic-svg--pulse">
-      <!-- corps du cadenas -->
-      <rect x="10.5" y="14.5" width="11" height="7.5" rx="2"
-            fill="#020617" stroke="#e5e7eb" stroke-width="1" />
+<svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+  <!-- corps du cadenas -->
+  <rect x="10" y="14.5" width="12" height="8" rx="2"
+        fill="#020617" stroke="#e5e7eb" stroke-width="1.1" />
 
-      <!-- anse animée -->
-      <g>
-        <path
-          id="shackle"
-          d="M12.8 14.5 V12.5
-             Q12.8 9.5 16 9.5
-             Q19.2 9.5 19.2 12.5
-             V14.5"
-          fill="none" stroke="#e5e7eb" stroke-width="1.1"
-          stroke-linecap="round" />
-        <animateTransform
-          attributeName="transform"
-          type="rotate"
-          values="0 16 12; -20 16 12; 0 16 12"
-          dur="2.4s"
-          repeatCount="indefinite" />
-      </g>
+  <!-- anse animée -->
+  <g id="shackle">
+    <path
+      d="M12.8 14.5 V12.2
+         Q12.8 9.5 16 9.5
+         Q19.2 9.5 19.2 12.2
+         V14.5"
+      fill="none" stroke="#e5e7eb" stroke-width="1.1"
+      stroke-linecap="round" />
+    <animateTransform
+      attributeName="transform"
+      type="rotate"
+      values="0 16 12; -35 16 12; 0 16 12"
+      dur="2.4s"
+      repeatCount="indefinite" />
+  </g>
 
-      <!-- trou de serrure -->
-      <circle cx="16" cy="18" r="1.1" fill="#facc15" />
-      <rect x="15.5" y="18.7" width="1" height="2"
-            rx="0.5" fill="#facc15" />
+  <!-- trou de serrure -->
+  <circle cx="16" cy="18.5" r="1.2" fill="#facc15" />
+  <rect x="15.4" y="19.3" width="1.2" height="2"
+        rx="0.6" fill="#facc15" />
 
-      <!-- reflet "transparence" -->
-      <path
-        d="M11 11 Q16 9.8 21 11"
-        stroke="#facc15" stroke-width="0.9" stroke-linecap="round">
-        <animate
-          attributeName="opacity"
-          values="0;1;0"
-          dur="2.4s"
-          repeatCount="indefinite" />
-        <animateTransform
-          attributeName="transform"
-          type="translate"
-          values="-1 0; 1 0; -1 0"
-          dur="2.4s"
-          repeatCount="indefinite" />
-      </path>
-    </svg>
+  <!-- reflet pour la notion de transparence -->
+  <path
+    d="M11 11 Q16 9.6 21 11"
+    stroke="#facc15" stroke-width="0.9" stroke-linecap="round">
+    <animate attributeName="opacity"
+             values="0;1;0"
+             dur="2.4s"
+             repeatCount="indefinite" />
+  </path>
+</svg>
   </span>
   Transparence & sécurité
 </li>
@@ -828,50 +807,52 @@
 <!-- TUILE MAIL -->
 <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet>
 <div class="contact__icon contact__icon--float">
-  <svg viewBox="0 0 64 64" aria-hidden="true">
-    <defs>
-      <linearGradient id="mail-grad-clean" x1="0%" y1="0%" x2="100%" y2="0%">
-        <stop offset="0%" stop-color="#ec4899" />
-        <stop offset="50%" stop-color="#f97316" />
-        <stop offset="100%" stop-color="#facc15" />
-      </linearGradient>
-    </defs>
+<svg viewBox="0 0 64 64" aria-hidden="true">
+  <defs>
+    <linearGradient id="mail-grad-open" x1="0%" y1="0%" x2="100%" y2="0%">
+      <stop offset="0%" stop-color="#ec4899" />
+      <stop offset="50%" stop-color="#f97316" />
+      <stop offset="100%" stop-color="#facc15" />
+    </linearGradient>
+  </defs>
 
-    <!-- corps de l’enveloppe -->
-    <rect x="10" y="22" width="44" height="24" rx="6"
-          fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+  <!-- corps de l’enveloppe -->
+  <rect x="14" y="24" width="36" height="20" rx="5"
+        fill="#020617" stroke="#e5e7eb" stroke-width="2" />
 
-    <!-- lettre -->
-    <g>
-      <rect id="letter"
-            x="14" y="18" width="36" height="18" rx="2.5"
-            fill="#f9fafb" />
-      <!-- anim sortie / rentrée douce -->
-      <animateTransform
-        attributeName="transform"
-        type="translate"
-        values="0 0; 0 -6; 0 0"
-        dur="2.6s"
-        repeatCount="indefinite" />
-    </g>
+  <!-- lettre -->
+  <rect id="letter"
+        x="17" y="26" width="30" height="16" rx="2.5"
+        fill="#f9fafb">
+    <animate attributeName="y"
+             values="26;20;26"
+             dur="2.4s"
+             repeatCount="indefinite" />
+  </rect>
 
-    <!-- intérieur coloré -->
-    <path d="M12 24 L32 36 L52 24" fill="url(#mail-grad-clean)" />
+  <!-- intérieur coloré -->
+  <path d="M16 26 L32 38 L48 26" fill="url(#mail-grad-open)" />
 
-    <!-- rabat -->
-    <path
-      d="M12 24 L32 36 L52 24 L52 22 L12 22 Z"
-      fill="rgba(15,23,42,0.98)" stroke="#e5e7eb" stroke-width="2" />
+  <!-- rabat qui pivote -->
+  <path id="flap"
+        d="M16 26 L32 38 L48 26 L48 24 L16 24 Z"
+        fill="#020617" stroke="#e5e7eb" stroke-width="2">
+    <animateTransform
+      attributeName="transform"
+      type="rotate"
+      values="0 32 26; -55 32 26; 0 32 26"
+      dur="2.4s"
+      repeatCount="indefinite" />
+  </path>
 
-    <!-- badge de notif -->
-    <circle cx="50" cy="24" r="3.5" fill="#ef4444">
-      <animate
-        attributeName="r"
-        values="3.5;4.3;3.5"
-        dur="2s"
-        repeatCount="indefinite" />
-    </circle>
-  </svg>
+  <!-- badge de notif -->
+  <circle cx="47" cy="26" r="3.5" fill="#ef4444">
+    <animate attributeName="r"
+             values="3.5;4.3;3.5"
+             dur="2s"
+             repeatCount="indefinite" />
+  </circle>
+</svg>
 </div>
   <strong>contact@informatique-cerdagne.fr</strong>
   <small>Réponse rapide</small>
@@ -882,61 +863,56 @@
    href="https://www.google.com/maps/search/?api=1&query=Cerdagne"
    target="_blank" rel="noopener" data-magnet>
 <div class="contact__icon contact__icon--float">
-  <svg viewBox="0 0 64 64" aria-hidden="true">
-    <!-- cercles qui se propagent -->
-    <circle cx="32" cy="38" r="4"
-            fill="none" stroke="#facc15" stroke-width="1.5" opacity="0">
-      <animate
-        attributeName="r"
-        values="4;10"
-        dur="2s"
-        repeatCount="indefinite" />
-      <animate
-        attributeName="opacity"
-        values="0.8;0;0"
-        dur="2s"
-        repeatCount="indefinite" />
-    </circle>
-    <circle cx="32" cy="38" r="8"
-            fill="none" stroke="#ec4899" stroke-width="1.2" opacity="0">
-      <animate
-        attributeName="r"
-        values="8;16"
-        dur="2.6s"
-        repeatCount="indefinite" />
-      <animate
-        attributeName="opacity"
-        values="0.7;0;0"
-        dur="2.6s"
-        repeatCount="indefinite" />
-    </circle>
+<svg viewBox="0 0 64 64" aria-hidden="true">
+  <!-- route -->
+  <path id="route"
+        d="M10 42 C18 36 26 38 34 34 C42 30 48 28 54 26"
+        fill="none"
+        stroke="#64748b"
+        stroke-width="2.2"
+        stroke-linecap="round"
+        stroke-dasharray="4 5" />
 
-    <!-- pin central -->
-    <g>
-      <path
-        d="M32 18
-           C27 18 23 22 23 27
-           C23 30.4 24.6 33.2 26.4 35.8
-           C28 38.1 29.7 40.1 31 41.9
-           C31.5 42.6 31.7 42.8 32 43.2
-           C32.3 42.8 32.5 42.6 33 41.9
-           C34.3 40.1 36 38.1 37.6 35.8
-           C39.4 33.2 41 30.4 41 27
-           C41 22 37 18 32 18Z"
-        fill="#020617" stroke="#e5e7eb" stroke-width="2" />
-      <circle cx="32" cy="27" r="5" fill="#ec4899" />
-    </g>
+  <!-- petite voiture qui se déplace -->
+  <g id="car">
+    <rect x="-3" y="-2" width="6" height="4" rx="1"
+          fill="#ec4899" />
+    <circle cx="-2" cy="2.2" r="1.1" fill="#0f172a" />
+    <circle cx="2"  cy="2.2" r="1.1" fill="#0f172a" />
+  </g>
+  <animateMotion
+    xlink:href="#car"
+    dur="3s"
+    repeatCount="indefinite"
+    rotate="auto">
+    <mpath xlink:href="#route" />
+  </animateMotion>
 
-    <!-- ombre -->
-    <ellipse cx="32" cy="42.5" rx="8" ry="2.5"
-             fill="rgba(0,0,0,0.7)">
-      <animate
-        attributeName="opacity"
-        values="0.7;0.4;0.7"
-        dur="2s"
-        repeatCount="indefinite" />
-    </ellipse>
-  </svg>
+  <!-- pin de destination -->
+  <g>
+    <path
+      d="M50 20
+         C46 20 43 23.4 43 27
+         C43 29.8 44.3 32.1 45.8 34.2
+         C47 35.9 48.1 37.4 49 38.7
+         C49.3 39.1 49.5 39.3 50 39.8
+         C50.5 39.3 50.7 39.1 51 38.7
+         C51.9 37.4 53 35.9 54.2 34.2
+         C55.7 32.1 57 29.8 57 27
+         C57 23.4 54 20 50 20Z"
+      fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+    <circle cx="50" cy="27" r="4.5" fill="#facc15" />
+  </g>
+
+  <!-- halo sous le pin -->
+  <ellipse cx="50" cy="41.5" rx="8" ry="2.5"
+           fill="rgba(0,0,0,0.7)">
+    <animate attributeName="opacity"
+             values="0.7;0.3;0.7"
+             dur="2s"
+             repeatCount="indefinite" />
+  </ellipse>
+</svg>
 </div>
   <strong>Cerdagne / Capcir</strong>
   <small>Zone d’intervention</small>
